[tool.poetry]
name = "exmachina"
version = "0.1.1"
description = "botを作るためのフレームワークです"
authors = ["agarichan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/agarichan/exmachina"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
ipykernel = "^6.6.1"
black = "^21.12b0"
flake8 = "^4.0.1"
tox-asdf = "^0.1.0"
pytest = "^6.2.5"

[tool.black]
line-length = 100
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
